# Morgue

./: Action.cpp  Action.h  CMakeLists.txt  CSVRepository.h  Domain.h  FileRepository.h  GUI.cpp  GUI.h  HTMLRepository.h  MainRepository.h  MyListTable.cpp  MyListTable.h  Service.cpp  Service.h  main.cpp  mylist.html  repo.txt  setari.txt
